<resources>
    <string name="app_name">NoteatReminder</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="play_button">Play</string>

    <string name="door_bell">Door_Bell.mp3</string>
    <string name="back"><![CDATA[>]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="stop">STOP</string>

    <string name="sound_player">Sound Player</string>
    <string name="headline">Not Eat Reminder</string>
    <string name="desc">Not Eat Reminder - App</string>

    <string name="pref_interval">Interval</string>
    <string name="pref_interval_unit">Interval Unit</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_interval_key" translatable="false">interval</string>
    <string name="pref_units_minutes" translatable="false">minutes</string>
    <string name="pref_units_hours" translatable="false">hours</string>
    <string name="pref_units_label_minutes">Minutes</string>
    <string name="pref_units_label_hours">Hours</string>

    <string name="pref_unit_default">hours</string>
    <string name="pref_interval_default">1</string>

    <string name="pref_interval_one">1</string>
    <string name="pref_interval_two">2</string>
    <string name="pref_interval_three">3</string>
    <string name="pref_interval_four">4</string>
    <string name="pref_interval_five">5</string>
    <string name="pref_interval_ten">10</string>
    <string name="pref_interval_fifteen">15</string>
    <string name="pref_interval_twenty">20</string>
    <string name="pref_interval_thirty">30</string>
    <string name="pref_interval_fifty">50</string>

    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="pref_reminder_status_key" translatable="false">enable_reminder</string>
    <string name="pref_reminder_label">Turn On/Off</string>
    <string name="pref_reminder_status_true">On</string>
    <string name="pref_reminder_status_false">Off</string>
    <string name="pref_reminder_status_default" translatable="false">true</string>

    !-- Strings related to Notification preference -->
    <string name="pref_last_reminder">last_reminder</string>

</resources>
