<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListPreference
        android:title="@string/pref_interval_unit"
        android:key="@string/pref_units_key"
        android:defaultValue="@string/pref_interval_default"
        android:entryValues="@array/pref_units_values"
        android:entries="@array/pref_units_options" />

    <ListPreference
        android:title="@string/pref_interval"
        android:key="@string/pref_interval_key"
        android:defaultValue="@string/pref_interval_default"
        android:entryValues="@array/pref_interval_values"
        android:entries="@array/pref_interval_values" />

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />

</PreferenceScreen>